@@ -1,6 +1,7 @@
 2011-01-24  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed issue #12506: Add missing languages and/or missing TYPO3 language codes (Albanian, Canadian French, Filipino, Georgian, Khmer, Serbian)
+	* Fixed issue #12508: Update countries to level of ISO 3166-1:2006 - Newsletter VI-8 (2010-12-15)
 
 2010-04-29  Franz Holzinger  <franz@ttproducts.de>
 
